--- a/FreeCodeCamp25ReactProjects/src/components/accordian/styles.css
+++ b/FreeCodeCamp25ReactProjects/src/components/accordian/styles.css
@@ -1,9 +1,19 @@
 .wrapper {
   display: flex;
+  flex-direction: column;
   height: 100vh;
   width: 100vw;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+}
+
+.wrapper button {
+  padding: 10px 20px;
+  background: black;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .accordian {
